src/test/deca/context/valid/Obj/select-select-field.deca
// Description:
//    Sélection d'un champ en cascade
//
// Résultat:
//    Succès
//
class A {
    int n;
}
class B {
    A a;
}
{
    B b ;
    int m = b.a.n;
}